[project]
name = "voiceaireceptionist-agent"
version = "0.1.0"
description = "Mia — voice AI receptionist for Realtors (LiveKit Agent)"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[deepgram,openai,cartesia,silero,turn-detector,noise-cancellation]~=1.5",
    "livekit-plugins-noise-cancellation>=0.2.5",
]

[project.scripts]
realtor-receptionist = "realtor_receptionist:server.run"
